--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     // DI
     implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:2.1.0'
     implementation 'com.github.stephanenicolas.toothpick:smoothie:2.1.0'
-    annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:2.1.0'
+    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:2.1.0'
 
     // Routing
     implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
