Dependency Injection refactoring

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     // QR
     implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+
+    // Files downloading
+    implementation 'com.liulishuo.filedownloader:library:1.7.7'
 }
